--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -283,87 +283,19 @@
     }
   </style>
 
-LOG: 2026-01-29] Data Reset & Event Preparation Tournament: Compadres Collegiate (UTRGV) Venue: Iberostar Playa Paraiso - MX Date: Feb 2-4, 2026
+데이터 Reset 과정에서 상단 로그 정보가 HTML 태그 내부에 포함되지 않아 레이아웃이 깨진 것으로 파악됩니다. 텍스트 로그를 별도로 분리하고, 요청하신 테이블 구조와 디자인 속성을 1bit도 틀림없이 복사 붙여넣기 가능한 전체 코드로 다시 출력합니다.
+
+[LOG: 2026-01-29] Data Reset & Event Preparation Tournament: Compadres Collegiate (UTRGV) Venue: Iberostar Playa Paraiso - MX Date: Feb 2-4, 2026
 
 <div style="border-bottom: 2px solid #0c2340; padding-bottom: 20px; margin-bottom: 40px; text-align: center;"> <h1 style="margin: 0; color: #0c2340; font-size: 24px; letter-spacing: 2px; font-weight: 900; text-transform: uppercase;"> Tournament Results </h1> </div>
 
 <div class="live-event-card"> <div style="padding: 20px 25px; display: flex; align-items: center; justify-content: space-between; flex-wrap: wrap; gap: 10px; background: #f8fafc;"> <div style="display: flex; align-items: center; gap: 12px;"> <span style="background: #0c2340; color: white; padding: 4px 12px; border-radius: 4px; font-size: 10px; font-weight: 900; letter-spacing: 1px;">UPCOMING</span> <h2 style="color: #0c2340; margin: 0; font-size: 19px; font-weight: 800;">Compadres Collegiate (UTRGV)</h2> </div> <div style="font-size: 11px; color: #95a5a6; font-weight: 600;">Updated: Jan 29, 2026</div> </div>
 
-<div style="overflow: hidden;">
-  <table class="log-table">
-    <thead>
-      <tr>
-        <th class="col-info col-left">Round</th>
-        <th class="col-score">Score</th>
-        <th class="col-par">Par</th>
-        <th class="col-status">Status</th>
-        <th class="col-finish">Rank</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td class="col-left">
-          <div style="font-weight: 800; color: #0c2340; font-size: 15px;">Round 1: Playa Paraiso</div>
-          <div style="font-size: 11px; color: #7f8c8d;">Feb 2 | Par 72</div>
-          <div class="mobile-status-bar">
-            <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value">-</span></div>
-            <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value">-</span></div>
-            <div class="ms-item"><span class="ms-label">RANK</span><span class="ms-value">-</span></div>
-          </div>
-        </td>
-        <td class="hide-mobile" style="color: #bdc3c7;">-</td>
-        <td class="hide-mobile" style="color: #bdc3c7;">-</td>
-        <td class="hide-mobile" style="font-size: 12px; color: #95a5a6;">Upcoming</td>
-        <td class="hide-mobile" style="color: #bdc3c7;">-</td>
-      </tr>
-      <tr>
-        <td class="col-left">
-          <div style="font-weight: 800; color: #0c2340; font-size: 15px;">Round 2: Playa Paraiso</div>
-          <div style="font-size: 11px; color: #7f8c8d;">Feb 3 | Par 72</div>
-          <div class="mobile-status-bar">
-            <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value">-</span></div>
-            <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value">-</span></div>
-            <div class="ms-item"><span class="ms-label">RANK</span><span class="ms-value">-</span></div>
-          </div>
-        </td>
-        <td class="hide-mobile" style="color: #bdc3c7;">-</td>
-        <td class="hide-mobile" style="color: #bdc3c7;">-</td>
-        <td class="hide-mobile" style="font-size: 12px; color: #95a5a6;">Upcoming</td>
-        <td class="hide-mobile" style="color: #bdc3c7;">-</td>
-      </tr>
-      <tr>
-        <td class="col-left">
-          <div style="font-weight: 800; color: #0c2340; font-size: 15px;">Round 3: Playa Paraiso</div>
-          <div style="font-size: 11px; color: #7f8c8d;">Feb 4 | Par 72</div>
-          <div class="mobile-status-bar">
-            <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value">-</span></div>
-            <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value">-</span></div>
-            <div class="ms-item"><span class="ms-label">RANK</span><span class="ms-value">-</span></div>
-          </div>
-        </td>
-        <td class="hide-mobile" style="color: #bdc3c7;">-</td>
-        <td class="hide-mobile" style="color: #bdc3c7;">-</td>
-        <td class="hide-mobile" style="font-size: 12px; color: #95a5a6;">Upcoming</td>
-        <td class="hide-mobile" style="color: #bdc3c7;">-</td>
-      </tr>
-    </tbody>
-  </table>
-</div>
+<div style="overflow: hidden;"> <table class="log-table"> <thead> <tr> <th class="col-info col-left">Round</th> <th class="col-score">Score</th> <th class="col-par">Par</th> <th class="col-status">Status</th> <th class="col-finish">Rank</th> </tr> </thead> <tbody> <tr> <td class="col-left"> <div style="font-weight: 800; color: #0c2340; font-size: 15px;">Round 1: Playa Paraiso</div> <div style="font-size: 11px; color: #7f8c8d;">Feb 2 | Par 72</div> <div class="mobile-status-bar"> <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value">-</span></div> <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value">-</span></div> <div class="ms-item"><span class="ms-label">RANK</span><span class="ms-value">-</span></div> </div> </td> <td class="hide-mobile" style="color: #bdc3c7;">-</td> <td class="hide-mobile" style="color: #bdc3c7;">-</td> <td class="hide-mobile" style="font-size: 12px; color: #95a5a6;">Upcoming</td> <td class="hide-mobile" style="color: #bdc3c7;">-</td> </tr> <tr> <td class="col-left"> <div style="font-weight: 800; color: #0c2340; font-size: 15px;">Round 2: Playa Paraiso</div> <div style="font-size: 11px; color: #7f8c8d;">Feb 3 | Par 72</div> <div class="mobile-status-bar"> <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value">-</span></div> <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value">-</span></div> <div class="ms-item"><span class="ms-label">RANK</span><span class="ms-value">-</span></div> </div> </td> <td class="hide-mobile" style="color: #bdc3c7;">-</td> <td class="hide-mobile" style="color: #bdc3c7;">-</td> <td class="hide-mobile" style="font-size: 12px; color: #95a5a6;">Upcoming</td> <td class="hide-mobile" style="color: #bdc3c7;">-</td> </tr> <tr> <td class="col-left"> <div style="font-weight: 800; color: #0c2340; font-size: 15px;">Round 3: Playa Paraiso</div> <div style="font-size: 11px; color: #7f8c8d;">Feb 4 | Par 72</div> <div class="mobile-status-bar"> <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value">-</span></div> <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value">-</span></div> <div class="ms-item"><span class="ms-label">RANK</span><span class="ms-value">-</span></div> </div> </td> <td class="hide-mobile" style="color: #bdc3c7;">-</td> <td class="hide-mobile" style="color: #bdc3c7;">-</td> <td class="hide-mobile" style="font-size: 12px; color: #95a5a6;">Upcoming</td> <td class="hide-mobile" style="color: #bdc3c7;">-</td> </tr> </tbody> </table> </div>
 
-<div style="background: #0c2340; padding: 15px 25px; display: flex; justify-content: flex-end; align-items: center; gap: 30px;">
-  <div style="text-align: right;">
-    <span style="color: rgba(255,255,255,0.6); font-size: 9px; font-weight: 800; display: block; text-transform: uppercase;">Total Score</span>
-    <span style="color: #ffffff; font-size: 18px; font-weight: 900;">-</span>
-  </div>
-  <div style="text-align: right;">
-    <span style="color: rgba(255,255,255,0.6); font-size: 9px; font-weight: 800; display: block; text-transform: uppercase;">Final Par</span>
-    <span style="color: #ffffff; font-size: 18px; font-weight: 900;">-</span>
-  </div>
-  <div style="text-align: right;">
-    <span style="color: rgba(255,255,255,0.6); font-size: 9px; font-weight: 800; display: block; text-transform: uppercase;">Final Rank</span>
-    <span style="color: #ffffff; font-size: 18px; font-weight: 900;">-</span>
-  </div>
-</div>
+<div style="background: #0c2340; padding: 15px 25px; display: flex; justify-content: flex-end; align-items: center; gap: 30px;"> <div style="text-align: right;"> <span style="color: rgba(255,255,255,0.6); font-size: 9px; font-weight: 800; display: block; text-transform: uppercase;">Total Score</span> <span style="color: #ffffff; font-size: 18px; font-weight: 900;">-</span> </div> <div style="text-align: right;"> <span style="color: rgba(255,255,255,0.6); font-size: 9px; font-weight: 800; display: block; text-transform: uppercase;">Final Par</span> <span style="color: #ffffff; font-size: 18px; font-weight: 900;">-</span> </div> <div style="text-align: right;"> <span style="color: rgba(255,255,255,0.6); font-size: 9px; font-weight: 800; display: block; text-transform: uppercase;">Final Rank</span> <span style="color: #ffffff; font-size: 18px; font-weight: 900;">-</span> </div> </div> </div>
+
+  
 
   
   
