--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -1136,7 +1136,7 @@
     <h3 style="margin: 0; color: #0c2340; font-size: 16px; letter-spacing: 1px; text-transform: uppercase; font-weight: 900;">JOURNEY IN PHOTOS</h3>
   </div>
 
-  <div id="thumbScroll" style="display: flex; overflow-x: auto; gap: 15px; padding: 0 15px 20px; -webkit-overflow-scrolling: touch; scroll-snap-type: x mandatory;">
+<div id="thumbScroll" style="display: flex; overflow-x: auto; gap: 15px; padding: 0 15px 20px; -webkit-overflow-scrolling: touch; scroll-snap-type: x mandatory;">
     <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Mens-Schedule-Spring-2026.jpeg" onclick="popupGallery(0)" style="flex: 0 0 280px; height: 380px; object-fit: cover; border-radius: 16px; cursor: pointer; scroll-snap-align: start; border: 1px solid #f1f1f1; box-shadow: 0 10px 20px rgba(0,0,0,0.05);">
     <img src="https://lh3.googleusercontent.com/u/0/d/1lCIaCOrTusifqK1yezz7e2-lTta_EZMl" onclick="popupGallery(1)" style="flex: 0 0 280px; height: 380px; object-fit: cover; border-radius: 16px; cursor: pointer; scroll-snap-align: start; border: 1px solid #f1f1f1; box-shadow: 0 10px 20px rgba(0,0,0,0.05);">
     <img src="https://lh3.googleusercontent.com/u/0/d/1d3bKS9feh0jHSUc417oDk3Keiy2gmDSV" onclick="popupGallery(2)" style="flex: 0 0 280px; height: 380px; object-fit: cover; border-radius: 16px; cursor: pointer; scroll-snap-align: start; border: 1px solid #f1f1f1; box-shadow: 0 10px 20px rgba(0,0,0,0.05);">
@@ -1174,6 +1174,7 @@
       "./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-first-line-up-argent.jpeg", // 13
       "./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-argent-69.jpeg" // 14
     ];
+  </script>
 
     function popupGallery(index) {
       const w = window.innerWidth > 1100 ? 1100 : window.innerWidth;
