--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -1136,7 +1136,7 @@
     <h3 style="margin: 0; color: #0c2340; font-size: 16px; letter-spacing: 1px; text-transform: uppercase; font-weight: 900;">JOURNEY IN PHOTOS</h3>
   </div>
 
-<div id="thumbScroll" style="display: flex; overflow-x: auto; gap: 15px; padding: 0 15px 20px; -webkit-overflow-scrolling: touch; scroll-snap-type: x mandatory;">
+  <div id="thumbScroll" style="display: flex; overflow-x: auto; gap: 15px; padding: 0 15px 20px; -webkit-overflow-scrolling: touch; scroll-snap-type: x mandatory;">
     <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Mens-Schedule-Spring-2026.jpeg" onclick="popupGallery(0)" style="flex: 0 0 280px; height: 380px; object-fit: cover; border-radius: 16px; cursor: pointer; scroll-snap-align: start; border: 1px solid #f1f1f1; box-shadow: 0 10px 20px rgba(0,0,0,0.05);">
     <img src="https://lh3.googleusercontent.com/u/0/d/1lCIaCOrTusifqK1yezz7e2-lTta_EZMl" onclick="popupGallery(1)" style="flex: 0 0 280px; height: 380px; object-fit: cover; border-radius: 16px; cursor: pointer; scroll-snap-align: start; border: 1px solid #f1f1f1; box-shadow: 0 10px 20px rgba(0,0,0,0.05);">
     <img src="https://lh3.googleusercontent.com/u/0/d/1d3bKS9feh0jHSUc417oDk3Keiy2gmDSV" onclick="popupGallery(2)" style="flex: 0 0 280px; height: 380px; object-fit: cover; border-radius: 16px; cursor: pointer; scroll-snap-align: start; border: 1px solid #f1f1f1; box-shadow: 0 10px 20px rgba(0,0,0,0.05);">
@@ -1156,25 +1156,23 @@
   </div>
 
   <script>
-    // 위 태그에 나열된 순서와 정확히 일치하도록 배열을 재구성했습니다.
     const images = [
-      "./images/freshman-2025-2026/joshua-hong-UTSA-Mens-Schedule-Spring-2026.jpeg", // 0
-      "https://lh3.googleusercontent.com/u/0/d/1lCIaCOrTusifqK1yezz7e2-lTta_EZMl", // 1
-      "https://lh3.googleusercontent.com/u/0/d/1d3bKS9feh0jHSUc417oDk3Keiy2gmDSV", // 2
-      "https://lh3.googleusercontent.com/u/0/d/1ttYQR6vJiaT6bn37kOv3NM-9iBMWq5mD", // 3
-      "https://lh3.googleusercontent.com/u/0/d/1tmxnMytAdxGeKYfqZLtmRUu4WDjnVIcT", // 4
-      "https://lh3.googleusercontent.com/u/0/d/1V8Xq_0vqHi59R0G4d5zQuJmgbC2c29Yb", // 5
-      "https://lh3.googleusercontent.com/u/0/d/1QYoIC0eQs1aMsezqtEfqQIGfiG_xhGpI", // 6
-      "https://lh3.googleusercontent.com/u/0/d/1oTK7qKQZBZPMy-RNaTu_czW7sYHEImJv", // 7
-      "https://lh3.googleusercontent.com/u/0/d/1o66-D04s2dMwpWlBBcNC0HACsD-EqeZ7", // 8
-      "./images/freshman-2025-2026/joshua-hong-UTSA-Mens-Schedule-2025-2026.jpeg", // 9
-      "./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-second-line-up-highlands-results.jpeg", // 10
-      "./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-second-line-up-highlands.jpeg", // 11
-      "./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-first-line-up-argent-results.jpeg", // 12
-      "./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-first-line-up-argent.jpeg", // 13
-      "./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-argent-69.jpeg" // 14
+      "./images/freshman-2025-2026/joshua-hong-UTSA-Mens-Schedule-Spring-2026.jpeg",
+      "https://lh3.googleusercontent.com/u/0/d/1lCIaCOrTusifqK1yezz7e2-lTta_EZMl",
+      "https://lh3.googleusercontent.com/u/0/d/1d3bKS9feh0jHSUc417oDk3Keiy2gmDSV",
+      "https://lh3.googleusercontent.com/u/0/d/1ttYQR6vJiaT6bn37kOv3NM-9iBMWq5mD",
+      "https://lh3.googleusercontent.com/u/0/d/1tmxnMytAdxGeKYfqZLtmRUu4WDjnVIcT",
+      "https://lh3.googleusercontent.com/u/0/d/1V8Xq_0vqHi59R0G4d5zQuJmgbC2c29Yb",
+      "https://lh3.googleusercontent.com/u/0/d/1QYoIC0eQs1aMsezqtEfqQIGfiG_xhGpI",
+      "https://lh3.googleusercontent.com/u/0/d/1oTK7qKQZBZPMy-RNaTu_czW7sYHEImJv",
+      "https://lh3.googleusercontent.com/u/0/d/1o66-D04s2dMwpWlBBcNC0HACsD-EqeZ7",
+      "./images/freshman-2025-2026/joshua-hong-UTSA-Mens-Schedule-2025-2026.jpeg",
+      "./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-second-line-up-highlands-results.jpeg",
+      "./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-second-line-up-highlands.jpeg",
+      "./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-first-line-up-argent-results.jpeg",
+      "./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-first-line-up-argent.jpeg",
+      "./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-argent-69.jpeg"
     ];
-  </script>
 
     function popupGallery(index) {
       const w = window.innerWidth > 1100 ? 1100 : window.innerWidth;
@@ -1183,7 +1181,7 @@
       const top = (screen.height / 2) - (h / 2);
       const popup = window.open("", "JoshuaGallery", `width=${w},height=${h},top=${top},left=${left},resizable=yes`);
       
-      popup.document.write(`
+      const content = `
         <html>
           <head>
             <title>Joshua Hong - Gallery</title>
@@ -1201,12 +1199,12 @@
           <body>
             <div id="close" onclick="window.close()">×</div>
             <div id="prev" class="nav-btn" onclick="move(-1)">❮</div>
-            <img id="mainImg" src="\${imgArray[idx]}">
+            <img id="mainImg" src="${images[index]}">
             <div id="next" class="nav-btn" onclick="move(1)">❯</div>
-            <div class="counter" id="countDisplay">\${idx + 1} / \${imgArray.length}</div>
+            <div class="counter" id="countDisplay">${index + 1} / ${images.length}</div>
             <script>
-              let idx = \${index};
-              const imgArray = \${JSON.stringify(images)};
+              let idx = ${index};
+              const imgArray = ${JSON.stringify(images)};
               function move(step) {
                 idx = (idx + step + imgArray.length) % imgArray.length;
                 const img = document.getElementById('mainImg');
@@ -1222,12 +1220,16 @@
                 if (e.key === "ArrowRight") move(1);
                 if (e.key === "Escape") window.close();
               });
-            <\/script>
+            ` + `</` + `script>
           </body>
         </html>
-      `);
+      `;
+      
+      popup.document.write(content);
+      popup.document.close();
     }
   </script>
+</div>
 
   <div style="text-align: center; padding-top: 20px; margin: 40px 15px 0; border-top: 1px solid #f1f1f1;">
     <p style="font-size: 11px; color: #aaa; text-transform: uppercase; letter-spacing: 2px; line-height: 1.8;">
