--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -341,7 +341,7 @@
                 <div>
                     <h4 style="margin: 0; font-size: 13px; color: #0c2340; font-weight: 900; text-transform: uppercase;">R3 Technical Feedback</h4>
                     <p style="margin: 5px 0 0 0; font-size: 13.5px; color: #475569; line-height: 1.6;">
-                        <strong>Status::</strong> R3 provided a data point for managing aggressive lines in high-margin scenarios. Specific parameters for recalibration identified. <br>
+                        <strong>Status:</strong> R3 provided a data point for managing aggressive lines in high-margin scenarios. Specific parameters for recalibration identified. <br>
                         <strong>Focus:</strong> Adjusting physical feel post-hiatus. Technical verification for Spring season opening.
                     </p>
                 </div>
@@ -362,7 +362,7 @@
             <div style="font-size: 18px; margin-bottom: 8px;">✈️</div>
             <h5 style="margin: 0 0 8px 0; font-size: 12px; color: #806600; font-weight: 900; text-transform: uppercase; border-bottom: 1px solid rgba(128, 102, 0, 0.2);">Travel Logistics</h5>
             <p style="margin: 0; font-size: 12.5px; color: #0c2340; font-weight: 700; line-height: 1.6;">
-                • Status: Travel Squad Confirmed<br>
+                • Line-Up: Travel Squad Confirmed<br>
                 • Destination: Cancun, Mexico<br>
                 • Departure: Jan 30 (Fri)<br>
                 • Goal: Peak performance for season opener
