--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -251,8 +251,19 @@
     .under-par { color: #e74c3c !important; font-weight: 800 !important; }
     .over-par { color: #2c3e50 !important; font-weight: 700 !important; }
     
-    /* 이중 스크롤 방지를 위해 overflow 설정 제거 */
-    .live-event-card { background: #ffffff; border: 2px solid #0c2340; border-radius: 20px; padding: 0; box-shadow: 0 15px 45px rgba(12, 35, 64, 0.12); margin-bottom: 50px; position: relative; display: flex; flex-direction: column; }
+    /* 테두리 끊김 방지를 위해 overflow: hidden 재적용 및 스크롤 간섭 제거 */
+    .live-event-card { 
+      background: #ffffff; 
+      border: 2px solid #0c2340; 
+      border-radius: 20px; 
+      padding: 0; 
+      box-shadow: 0 15px 45px rgba(12, 35, 64, 0.12); 
+      margin-bottom: 50px; 
+      position: relative; 
+      display: flex; 
+      flex-direction: column;
+      overflow: hidden; /* 모서리 끊김 해결 */
+    }
 
     @media (max-width: 768px) {
       .log-table thead { display: none; }
