--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
       </div>
     </div>
 
-    <a href="ncaa-stats.html#lineup-section" style="text-decoration: none; color: #0c2340; font-size: 11px; font-weight: 800; border-bottom: 1.5px solid #0c2340; padding-bottom: 2px;">
+    <a href="ncaa-stats.html#Tournament-Schedule-Scoring" style="text-decoration: none; color: #0c2340; font-size: 11px; font-weight: 800; border-bottom: 1.5px solid #0c2340; padding-bottom: 2px;">
       VIEW LINE-UP STATUS &rarr;
     </a>
   </div>
