--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -293,6 +293,8 @@
       Tournament Schedule & Scoring
     </h1>
   </div>
+    <div id="Tournament-Schedule-Scoring" style="padding-top: 20px;">
+    </div>
 
   <div class="live-event-card">
     <div style="padding: 20px 25px; display: flex; align-items: center; justify-content: space-between; flex-wrap: wrap; gap: 10px; background: #f8fafc;">
@@ -366,8 +368,7 @@
         </tbody>
       </table>
     </div>
-  <div id="lineup-section" style="padding-top: 20px;">
-    </div>
+
     <div style="background: #0c2340; padding: 15px 25px; display: flex; justify-content: flex-end; align-items: center; gap: 30px;">
       <a href="https://scoreboard.clippd.com/tournaments/239018/scoring/team" target="_blank" style="margin-right: auto; display: flex; align-items: center; gap: 8px; color: #ffffff; text-decoration: none; font-size: 11px; font-weight: 800; letter-spacing: 0.5px; text-transform: uppercase; border: 1px solid rgba(255,255,255,0.3); padding: 6px 12px; border-radius: 4px; transition: 0.2s;">
         LIVE LEADERBOARD
