--- a/index.html
+++ b/index.html
@@ -271,9 +271,12 @@
       </div>
     </div>
 
-    <a href="ncaa-stats.html#Tournament-Schedule-Scoring" style="text-decoration: none; color: #0c2340; font-size: 11px; font-weight: 800; border-bottom: 1.5px solid #0c2340; padding-bottom: 2px;">
-      VIEW LINE-UP STATUS &rarr;
-    </a>
+<a href="ncaa-stats.html#Tournament-Schedule-Scoring" style="text-decoration: none; display: inline-flex; align-items: center; gap: 8px;">
+  <span style="color: #0c2340; font-size: 11px; font-weight: 800; border-bottom: 1.5px solid #0c2340; padding-bottom: 2px; text-transform: uppercase; letter-spacing: 0.5px;">
+    VIEW LINE-UP STATUS
+  </span>
+  <div class="focus-arrow" style="color: #0c2340; font-size: 16px; line-height: 1;">&rarr;</div>
+</a>
   </div>
 </div>
 
