--- a/index.html
+++ b/index.html
@@ -247,11 +247,12 @@
     }
   </style>
 
-  <div style="margin-bottom: 12px; display: flex; align-items: center; gap: 10px;">
-    <h2 style="margin: 0; color: #0c2340; font-size: 14px; font-weight: 900; letter-spacing: 1px; text-transform: uppercase;">
+  <div style="margin-bottom: 15px; display: flex; align-items: center; justify-content: center; gap: 15px;">
+    <div style="flex-grow: 1; height: 1px; background: #edf2f7; max-width: 50px;"></div>
+    <h2 style="margin: 0; color: #806600; font-size: 14px; font-weight: 900; letter-spacing: 1px; text-transform: uppercase;">
       On-Going Activity
     </h2>
-    <div style="flex-grow: 1; height: 1px; background: #edf2f7;"></div>
+    <div style="flex-grow: 1; height: 1px; background: #edf2f7; max-width: 50px;"></div>
   </div>
 
   <div class="activity-card">
