--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
 
   <div style="margin-bottom: 15px; display: flex; align-items: center; justify-content: center; gap: 15px;">
     <div style="flex-grow: 1; height: 1px; background: #edf2f7; max-width: 50px;"></div>
-    <h2 style="margin: 0; color: #806600; font-size: 14px; font-weight: 700; letter-spacing: 1px; text-transform: uppercase;">
+    <h2 style="margin: 0; color: #c98a2e; font-size: 14px; font-weight: 700; letter-spacing: 1px; text-transform: uppercase;">
       <span style="font-weight: 900;">O</span>n-<span style="font-weight: 900;">G</span>oing <span style="font-weight: 900;">A</span>ctivity
     </h2>
     <div style="flex-grow: 1; height: 1px; background: #edf2f7; max-width: 50px;"></div>
