--- a/index.html
+++ b/index.html
@@ -238,14 +238,21 @@
       100% { opacity: 1; transform: scale(1); }
     }
     .status-dot { width: 6px; height: 6px; background-color: #ffffff; border-radius: 50%; display: inline-block; animation: pulse 2s infinite ease-in-out; }
-    .activity-card {
+    
+    /* 두 카드의 공통 스타일 적용 */
+    .activity-card, .focus-container {
       background: #ffffff;
-      border: 2px solid #0c2340;
+      border: 2px solid #0c2340; /* 테두리 두께와 색상 통일 */
       border-radius: 12px;
       overflow: hidden; 
       box-shadow: 0 8px 20px rgba(12, 35, 64, 0.06);
-      margin-bottom: 20px;
+      transition: all 0.2s;
     }
+
+    .activity-card {
+      margin-bottom: 15px; /* 카드 사이 간격 최적화 */
+    }
+
     .icon-link {
       display: flex;
       align-items: center;
@@ -253,17 +260,14 @@
       text-decoration: none;
       transition: 0.2s;
     }
+
     .focus-container {
-      background: #ffffff;
-      border: 1px solid #e2e8f0;
-      border-radius: 12px;
-      padding: 18px 22px;
+      padding: 15px 20px; /* 상단 카드와 여백 통일 */
       display: flex;
       align-items: center;
       justify-content: space-between;
-      transition: all 0.2s;
-      box-shadow: 0 4px 15px rgba(0,0,0,0.04);
     }
+
     .focus-content {
       display: flex;
       align-items: center;
@@ -271,6 +275,7 @@
       overflow: hidden; 
       flex: 1;
     }
+
     .focus-badge {
       background: #0c2340;
       color: #ffffff;
@@ -285,23 +290,27 @@
       align-items: center;
       gap: 8px;
     }
+
     .focus-text-wrapper {
       overflow: hidden;
       text-overflow: ellipsis;
       white-space: nowrap;
       flex: 1;
     }
+
     .focus-text {
       color: #475569;
       font-size: 14px;
       font-weight: 700;
       line-height: 1.4;
     }
+
     .focus-arrow-svg {
       padding-left: 15px;
       display: flex;
       align-items: center;
     }
+
     .focus-pulse {
       width: 6px;
       height: 6px;
@@ -309,11 +318,13 @@
       border-radius: 50%;
       animation: soft-pulse 2.5s infinite ease-in-out;
     }
+
     @keyframes soft-pulse {
       0% { opacity: 1; transform: scale(1); }
       50% { opacity: 0.3; transform: scale(0.8); }
       100% { opacity: 1; transform: scale(1); }
     }
+
     @media (max-width: 768px) {
       .focus-content { flex-direction: column; align-items: flex-start; gap: 10px; }
       .focus-text-wrapper { white-space: normal; display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical; }
