--- a/index.html
+++ b/index.html
@@ -332,13 +332,13 @@
     }
   </style>
 
-  <div style="margin-bottom: 20px; display: flex; align-items: center; justify-content: center; gap: 15px;">
-    <div style="flex-grow: 1; height: 1px; background: #edf2f7; max-width: 60px;"></div>
-    <h2 style="margin: 0; color: #806600; font-size: 14px; font-weight: 800; letter-spacing: 0.5px;">
-      On-Going Activity
-    </h2>
-    <div style="flex-grow: 1; height: 1px; background: #edf2f7; max-width: 60px;"></div>
-  </div>
+<div style="margin-bottom: 20px; display: flex; align-items: center; justify-content: center; gap: 15px;">
+  <div style="flex-grow: 1; height: 1px; background: #edf2f7; max-width: 60px;"></div>
+  <h2 style="margin: 0; color: #c98a2e; font-size: 13px; font-weight: 800; letter-spacing: 4px; text-transform: uppercase;">
+    On-Going Activity
+  </h2>
+  <div style="flex-grow: 1; height: 1px; background: #edf2f7; max-width: 60px;"></div>
+</div>
 
   <div class="activity-card">
     <div style="padding: 15px 20px; display: flex; align-items: center; justify-content: space-between; flex-wrap: wrap; gap: 15px;">
