--- a/junior-career.html
+++ b/junior-career.html
@@ -204,9 +204,9 @@
     }
   </script>
 
-<div style="font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; width: 100%; color: #2c3e50; line-height: 1.8; max-width: 900px; margin: auto; box-sizing: border-box; padding: 0 10px;">
+<div style="font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; width: 100%; color: #2c3e50; line-height: 1.8; max-width: 900px; margin: auto; box-sizing: border-box; padding: 140px 10px 0;">
 
-  <div style="text-align: center; margin-bottom: 35px; padding-top: 20px;">
+  <div style="text-align: center; margin-bottom: 35px;">
     <h1 style="font-size: 34px; font-weight: 900; color: #0c2340; margin: 0; letter-spacing: -1px; text-transform: uppercase;">JUNIOR CAREER</h1>
     <p style="font-size: 16px; color: #666; margin: 5px 0 0 0; font-weight: 500; letter-spacing: 1px;">
       Two-Time Consecutive FMG National Champion ('23-'24 & '24-'25)
