--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -211,9 +211,9 @@
 
     
     
-<div class="ncaa-hero-section" style="font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; width: 100%; max-width: 900px; margin: 0 auto 50px; padding: 0; box-sizing: border-box;">
+<div class="ncaa-hero-section" style="font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; width: 100%; max-width: 900px; margin: 0 auto 50px; padding: 140px 10px 0; box-sizing: border-box;">
 
-  <div style="text-align: center; margin-bottom: 35px; padding-top: 20px;">
+  <div style="text-align: center; margin-bottom: 35px;">
     <h1 style="font-size: 34px; font-weight: 900; color: #0c2340; margin: 0; letter-spacing: -1.5px; text-transform: uppercase; line-height: 1.1;">
   NCAA STATS
 </h1>
@@ -225,6 +225,7 @@
       <div style="height: 2px; width: 30px; background: #c98a2e;"></div>
     </div>
   </div>
+  
 
 <div class="image-section" style="max-width: 900px; margin: 0 auto 40px; padding: 0 15px; box-sizing: border-box;">
     <div style="width: 100%; border-radius: 25px; overflow: hidden; box-shadow: 0 20px 40px rgba(0,0,0,0.18); background-color: #ffffff; border: 1px solid #e2e8f0;">
