--- a/news-media.html
+++ b/news-media.html
@@ -205,8 +205,8 @@
     }
   </script>
 
-<div style="font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; width: 100%; color: #2c3e50; line-height: 1.8; max-width: 900px; margin: auto; box-sizing: border-box; padding: 0 10px;">
-  <div style="text-align: center; margin-bottom: 35px; padding-top: 20px;">
+<div style="font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; width: 100%; color: #2c3e50; line-height: 1.8; max-width: 900px; margin: auto; box-sizing: border-box; padding: 140px 10px 0;">
+  <div style="text-align: center; margin-bottom: 35px;">
     <h1 style="font-size: 34px; font-weight: 800; color: #0c2340; margin: 0; letter-spacing: -0.5px; text-transform: uppercase;">
       NEWS & MEDIA
     </h1>
