--- a/reference-links.html
+++ b/reference-links.html
@@ -205,8 +205,8 @@
     }
   </script>
 
-<div style="font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; width: 100%; color: #2c3e50; line-height: 1.8; max-width: 900px; margin: auto; box-sizing: border-box; padding: 0 10px;">
-  <div style="text-align: center; margin-bottom: 35px; padding-top: 20px;">
+<div style="font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; width: 100%; color: #2c3e50; line-height: 1.8; max-width: 900px; margin: auto; box-sizing: border-box; padding: 140px 10px 0;">
+  <div style="text-align: center; margin-bottom: 35px;">
     <h1 style="font-size: 34px; font-weight: 900; color: #0c2340; margin: 0; letter-spacing: -1px; text-transform: uppercase;">REFERENCE & LINKS</h1>
     <p style="font-size: 16px; color: #666; margin: 5px 0 0 0; font-weight: 500; letter-spacing: 1px;">
       Verified Records 
@@ -224,6 +224,8 @@
     </h2>
     <p style="color: #666; font-size: 14px; margin-top: 10px;">Comprehensive archive of official tournament results, rankings, and media reports.</p>
   </div>
+
+  
 
 <div style="margin-bottom: 30px; border: 1px solid #e0e0e0; border-radius: 8px; overflow: hidden; box-shadow: 0 4px 10px rgba(0,0,0,0.03);">
   <div style="background-color: #0c2340; color: white; padding: 18px 20px; font-weight: 800; font-size: 18px; display: flex; align-items: center; border-radius: 12px 12px 0 0; border-bottom: 3px solid #806600;">
