--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -378,15 +378,15 @@
         </svg>
       </a>
       <div style="text-align: right;">
-        <span style="color: rgba(255,255,255,0.6); font-size: 9px; font-weight: 800; display: block; text-transform: uppercase;">Total Score</span>
+        <span style="color: rgba(255,255,255,0.6); font-size: 9px; font-weight: 800; display: block; text-transform: uppercase;">R1-R2-R3 Score</span>
         <span style="color: #ffffff; font-size: 18px; font-weight: 900;">-</span>
       </div>
       <div style="text-align: right;">
-        <span style="color: rgba(255,255,255,0.6); font-size: 9px; font-weight: 800; display: block; text-transform: uppercase;">Final Par</span>
+        <span style="color: rgba(255,255,255,0.6); font-size: 9px; font-weight: 800; display: block; text-transform: uppercase;">Par</span>
         <span style="color: #ffffff; font-size: 18px; font-weight: 900;">-</span>
       </div>
       <div style="text-align: right;">
-        <span style="color: rgba(255,255,255,0.6); font-size: 9px; font-weight: 800; display: block; text-transform: uppercase;">Final Rank</span>
+        <span style="color: rgba(255,255,255,0.6); font-size: 9px; font-weight: 800; display: block; text-transform: uppercase;">Rank</span>
         <span style="color: #ffffff; font-size: 18px; font-weight: 900;">-</span>
       </div>
     </div>
