--- a/junior-career.html
+++ b/junior-career.html
@@ -253,7 +253,7 @@
     </div>
 </div>
 
-  <div style="margin-bottom: 50px;">
+<div style="margin-bottom: 50px;">
 <h3 style="font-size: 20px; color: #0c2340; margin-bottom: 20px; display: flex; align-items: center; font-weight: 800;">
   <div style="margin-right: 12px; display: flex; align-items: center; justify-content: center; background: #f1f5f9; width: 36px; height: 36px; border-radius: 10px; border: 1px solid #e2e8f0;">
     <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
@@ -263,27 +263,29 @@
   </div>
   <span style="letter-spacing: -0.5px;">Annual Statistical Progression — Junior</span>
 </h3>
-    <div class="table-container" style="overflow-x: auto;">
-      <table style="width: 100%; min-width: 500px; border-collapse: collapse; text-align: center; box-shadow: 0 2px 8px rgba(0,0,0,0.05); border-radius: 10px; overflow: hidden;">
+    <div class="table-container" style="overflow-x: hidden;">
+      <table style="width: 100%; border-collapse: collapse; text-align: center; box-shadow: 0 2px 8px rgba(0,0,0,0.05); border-radius: 10px; overflow: hidden; table-layout: fixed;">
         <thead>
           <tr style="background-color: #0c2340; color: white;">
-            <th style="padding: 15px; border: 1px solid #eee;">Year</th>
-            <th style="padding: 15px; border: 1px solid #eee;">Rounds</th>
-            <th style="padding: 15px; border: 1px solid #eee;">Average</th>
-            <th style="padding: 15px; border: 1px solid #eee;">Best Score</th>
+            <th style="padding: 12px 5px; border: 1px solid #eee; font-size: 13px;">Year</th>
+            <th style="padding: 12px 5px; border: 1px solid #eee; font-size: 13px;">Rounds</th>
+            <th style="padding: 12px 5px; border: 1px solid #eee; font-size: 13px;">Average</th>
+            <th style="padding: 12px 5px; border: 1px solid #eee; font-size: 13px;">Best Score</th>
           </tr>
         </thead>
         <tbody>
-          <tr style="background-color: #fff9f5;"><td style="padding: 12px; border: 1px solid #eee; font-weight: bold;">2024–25</td><td style="padding: 12px; border: 1px solid #eee;">52</td><td style="padding: 12px; border: 1px solid #eee; font-weight: bold; color: #d32f2f;">71.37</td><td style="padding: 12px; border: 1px solid #eee; color: #d32f2f; font-weight: bold;">62 (−10)</td></tr>
-          <tr style="background-color: #f9f9f9;"><td style="padding: 12px; border: 1px solid #eee;">2023–24</td><td style="padding: 12px; border: 1px solid #eee;">47</td><td style="padding: 12px; border: 1px solid #eee; color: #1565c0; font-weight: bold;">72.60</td><td style="padding: 12px; border: 1px solid #eee; color: #d32f2f; font-weight: bold;">64 (−8)</td></tr>
-          <tr><td style="padding: 12px; border: 1px solid #eee;">2022–23</td><td style="padding: 12px; border: 1px solid #eee;">45</td><td style="padding: 12px; border: 1px solid #eee; color: #333;">74.04</td><td style="padding: 12px; border: 1px solid #eee; color: #d32f2f; font-weight: bold;">66 (−5)</td></tr>
-          <tr style="background-color: #f9f9f9;"><td style="padding: 12px; border: 1px solid #eee;">2021–22</td><td style="padding: 12px; border: 1px solid #eee;">34</td><td style="padding: 12px; border: 1px solid #eee; color: #333;">77.88</td><td style="padding: 12px; border: 1px solid #eee; color: #d32f2f; font-weight: bold;">70 (−2)</td></tr>
-          <tr><td style="padding: 12px; border: 1px solid #eee;">2020–21</td><td style="padding: 12px; border: 1px solid #eee;">18</td><td style="padding: 12px; border: 1px solid #eee; color: #666;">79.39</td><td style="padding: 12px; border: 1px solid #eee; color: #666;">74</td></tr>
-          <tr style="background-color: #f9f9f9;"><td style="padding: 12px; border: 1px solid #eee;">2019–20</td><td style="padding: 12px; border: 1px solid #eee;">17</td><td style="padding: 12px; border: 1px solid #eee; color: #999;">86.88</td><td style="padding: 12px; border: 1px solid #eee; color: #999;">75</td></tr>
+          <tr style="background-color: #fff9f5;"><td style="padding: 12px 5px; border: 1px solid #eee; font-weight: bold; font-size: 13px;">2024–25</td><td style="padding: 12px 5px; border: 1px solid #eee; font-size: 13px;">52</td><td style="padding: 12px 5px; border: 1px solid #eee; font-weight: bold; color: #d32f2f; font-size: 13px;">71.37</td><td style="padding: 12px 5px; border: 1px solid #eee; color: #d32f2f; font-weight: bold; font-size: 13px;">62 (−10)</td></tr>
+          <tr style="background-color: #f9f9f9;"><td style="padding: 12px 5px; border: 1px solid #eee; font-size: 13px;">2023–24</td><td style="padding: 12px 5px; border: 1px solid #eee; font-size: 13px;">47</td><td style="padding: 12px 5px; border: 1px solid #eee; color: #1565c0; font-weight: bold; font-size: 13px;">72.60</td><td style="padding: 12px 5px; border: 1px solid #eee; color: #d32f2f; font-weight: bold; font-size: 13px;">64 (−8)</td></tr>
+          <tr><td style="padding: 12px 5px; border: 1px solid #eee; font-size: 13px;">2022–23</td><td style="padding: 12px 5px; border: 1px solid #eee; font-size: 13px;">45</td><td style="padding: 12px 5px; border: 1px solid #eee; color: #333; font-size: 13px;">74.04</td><td style="padding: 12px 5px; border: 1px solid #eee; color: #d32f2f; font-weight: bold; font-size: 13px;">66 (−5)</td></tr>
+          <tr style="background-color: #f9f9f9;"><td style="padding: 12px 5px; border: 1px solid #eee; font-size: 13px;">2021–22</td><td style="padding: 12px 5px; border: 1px solid #eee; font-size: 13px;">34</td><td style="padding: 12px 5px; border: 1px solid #eee; color: #333; font-size: 13px;">77.88</td><td style="padding: 12px 5px; border: 1px solid #eee; color: #d32f2f; font-weight: bold; font-size: 13px;">70 (−2)</td></tr>
+          <tr><td style="padding: 12px 5px; border: 1px solid #eee; font-size: 13px;">2020–21</td><td style="padding: 12px 5px; border: 1px solid #eee; font-size: 13px;">18</td><td style="padding: 12px 5px; border: 1px solid #eee; color: #666; font-size: 13px;">79.39</td><td style="padding: 12px 5px; border: 1px solid #eee; color: #666; font-size: 13px;">74</td></tr>
+          <tr style="background-color: #f9f9f9;"><td style="padding: 12px 5px; border: 1px solid #eee; font-size: 13px;">2019–20</td><td style="padding: 12px 5px; border: 1px solid #eee; font-size: 13px;">17</td><td style="padding: 12px 5px; border: 1px solid #eee; color: #999; font-size: 13px;">86.88</td><td style="padding: 12px 5px; border: 1px solid #eee; color: #999; font-size: 13px;">75</td></tr>
         </tbody>
       </table>
     </div>
   </div>
+
+  
 
   <div style="margin-bottom: 50px;">
 <h3 style="font-size: 20px; color: #0c2340; margin-bottom: 20px; display: flex; align-items: center; font-weight: 800;">
@@ -381,7 +383,7 @@
     </div>
   </div>
 
-  <div style="margin-bottom: 50px;">
+<div style="margin-bottom: 50px;">
 <h3 style="font-size: 20px; color: #1b5e20; margin-bottom: 20px; display: flex; align-items: center; font-weight: 800;">
   <div style="margin-right: 12px; display: flex; align-items: center; justify-content: center; background: #f0fdf4; width: 36px; height: 36px; border-radius: 10px; border: 1px solid #dcfce7;">
     <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#1b5e20" stroke-width="2.2" stroke-linecap="round" stroke-linejoin="round">
@@ -397,27 +399,46 @@
 </h3>
     
     <h4 style="color: #1b5e20; border-bottom: 2px solid #1b5e20; padding-bottom: 5px; margin-bottom: 15px;">Season 2025</h4>
-    <div class="table-container" style="overflow-x: auto; margin-bottom: 30px;">
-      <table style="width: 100%; min-width: 500px; border-collapse: collapse; font-size: 14px; box-shadow: 0 2px 5px rgba(0,0,0,0.05);">
-        <tr style="background: #1b5e20; color: white; font-weight: bold;"><td style="padding: 12px;">Date</td><td>Tournament</td><td>Category</td><td>Score</td><td>Result</td></tr>
-        <tr style="border-bottom: 1px solid #eee;"><td style="padding: 12px;">May 1–4</td><td>INTERZONAS (WAGR)</td><td>National</td><td style="color:#d32f2f; font-weight: bold;">215 (−1)</td><td style="font-weight: bold; color: #1b5e20;">1st</td></tr>
-        <tr style="border-bottom: 1px solid #eee; background: #fcfcfc;"><td style="padding: 12px;">Apr 3–6</td><td>6th Stage Zona Centro</td><td>Jr./Univ.</td><td>224 (+8)</td><td style="font-weight: bold; color: #1b5e20;">1st</td></tr>
-        <tr style="border-bottom: 1px solid #eee;"><td style="padding: 12px;">Feb 27</td><td>5th Stage Zona Centro</td><td>Jr./Univ.</td><td style="color:#d32f2f; font-weight: bold;">211 (−5)</td><td style="font-weight: bold; color: #1b5e20;">1st</td></tr>
-        <tr style="border-bottom: 1px solid #eee; background: #fcfcfc;"><td style="padding: 12px;">Feb 6–9</td><td>4th Stage Zona Centro</td><td>Jr./Univ.</td><td style="color:#d32f2f; font-weight: bold;">200 (−16)</td><td style="font-weight: bold; color: #1b5e20;">1st</td></tr>
-        <tr style="border-bottom: 1px solid #eee;"><td style="padding: 12px;">Jan 16</td><td>Copa Sur (WAGR)</td><td>National</td><td style="color:#d32f2f; font-weight: bold;">210 (−6)</td><td style="font-weight: bold; color: #1b5e20;">1st</td></tr>
+    <div class="table-container" style="overflow-x: hidden; margin-bottom: 30px;">
+      <table style="width: 100%; border-collapse: collapse; font-size: 12px; box-shadow: 0 2px 5px rgba(0,0,0,0.05); table-layout: fixed;">
+        <thead>
+          <tr style="background: #1b5e20; color: white; font-weight: bold;">
+            <td style="padding: 10px 4px; width: 20%;">Date</td>
+            <td style="padding: 10px 4px; width: 35%;">Tournament</td>
+            <td style="padding: 10px 4px; width: 18%;">Category</td>
+            <td style="padding: 10px 4px; width: 17%;">Score</td>
+            <td style="padding: 10px 4px; width: 10%;">Result</td>
+          </tr>
+        </thead>
+        <tbody>
+          <tr style="border-bottom: 1px solid #eee;"><td style="padding: 10px 4px;">May 1–4</td><td style="padding: 10px 4px;">INTERZONAS (WAGR)</td><td style="padding: 10px 4px;">National</td><td style="padding: 10px 4px; color:#d32f2f; font-weight: bold;">215 (−1)</td><td style="padding: 10px 4px; font-weight: bold; color: #1b5e20;">1st</td></tr>
+          <tr style="border-bottom: 1px solid #eee; background: #fcfcfc;"><td style="padding: 10px 4px;">Apr 3–6</td><td style="padding: 10px 4px;">6th Stage Zona Centro</td><td style="padding: 10px 4px;">Jr./Univ.</td><td style="padding: 10px 4px;">224 (+8)</td><td style="padding: 10px 4px; font-weight: bold; color: #1b5e20;">1st</td></tr>
+          <tr style="border-bottom: 1px solid #eee;"><td style="padding: 10px 4px;">Feb 27</td><td style="padding: 10px 4px;">5th Stage Zona Centro</td><td style="padding: 10px 4px;">Jr./Univ.</td><td style="padding: 10px 4px; color:#d32f2f; font-weight: bold;">211 (−5)</td><td style="padding: 10px 4px; font-weight: bold; color: #1b5e20;">1st</td></tr>
+          <tr style="border-bottom: 1px solid #eee; background: #fcfcfc;"><td style="padding: 10px 4px;">Feb 6–9</td><td style="padding: 10px 4px;">4th Stage Zona Centro</td><td style="padding: 10px 4px;">Jr./Univ.</td><td style="padding: 10px 4px; color:#d32f2f; font-weight: bold;">200 (−16)</td><td style="padding: 10px 4px; font-weight: bold; color: #1b5e20;">1st</td></tr>
+          <tr style="border-bottom: 1px solid #eee;"><td style="padding: 10px 4px;">Jan 16</td><td style="padding: 10px 4px;">Copa Sur (WAGR)</td><td style="padding: 10px 4px;">National</td><td style="padding: 10px 4px; color:#d32f2f; font-weight: bold;">210 (−6)</td><td style="padding: 10px 4px; font-weight: bold; color: #1b5e20;">1st</td></tr>
+        </tbody>
       </table>
     </div>
 
     <h4 style="color: #1b5e20; border-bottom: 2px solid #1b5e20; padding-bottom: 5px; margin-bottom: 15px;">Season 2024</h4>
-    <div class="table-container" style="overflow-x: auto; margin-bottom: 30px;">
-      <table style="width: 100%; min-width: 500px; border-collapse: collapse; font-size: 14px; box-shadow: 0 2px 5px rgba(0,0,0,0.05);">
-        <tr style="border-bottom: 1px solid #eee;"><td style="padding: 12px; width: 25%;">Nov 28</td><td style="width: 45%;">3rd Stage Zona Centro (WAGR)</td><td style="width: 20%; color:#d32f2f; font-weight: bold;">211 (−5)</td><td style="font-weight: bold; width: 10%; color: #1b5e20;">1st</td></tr>
-        <tr style="border-bottom: 1px solid #eee; background: #fcfcfc;"><td style="padding: 12px;">Oct 31</td><td>Copa Pacífico (WAGR)</td><td style="color:#d32f2f; font-weight: bold;">206 (−10)</td><td style="font-weight: bold; color: #1b5e20;">1st</td></tr>
-        <tr style="border-bottom: 1px solid #eee;"><td style="padding: 12px;">Oct 17</td><td>2nd Stage Zona Centro (WAGR)</td><td style="color:#d32f2f; font-weight: bold;">213 (−3)</td><td style="font-weight: bold; color: #1b5e20;">1st</td></tr>
-        <tr style="border-bottom: 1px solid #eee; background: #fcfcfc;"><td style="padding: 12px;">Sep 26</td><td>Copa Centro (WAGR)</td><td style="color:#d32f2f; font-weight: bold;">203 (−13)</td><td style="font-weight: bold; color: #1b5e20;">1st</td></tr>
-        <tr style="border-bottom: 1px solid #eee;"><td style="padding: 12px;">Sep 6</td><td>1st Stage Zona Centro</td><td style="color:#d32f2f; font-weight: bold;">135 (−9)</td><td style="font-weight: bold; color: #1b5e20;">1st</td></tr>
+    <div class="table-container" style="overflow-x: hidden; margin-bottom: 30px;">
+      <table style="width: 100%; border-collapse: collapse; font-size: 12px; box-shadow: 0 2px 5px rgba(0,0,0,0.05); table-layout: fixed;">
+        <tbody>
+          <tr style="border-bottom: 1px solid #eee;">
+            <td style="padding: 10px 4px; width: 20%;">Nov 28</td>
+            <td style="padding: 10px 4px; width: 50%;">3rd Stage Zona Centro (WAGR)</td>
+            <td style="padding: 10px 4px; width: 20%; color:#d32f2f; font-weight: bold;">211 (−5)</td>
+            <td style="padding: 10px 4px; width: 10%; font-weight: bold; color: #1b5e20;">1st</td>
+          </tr>
+          <tr style="border-bottom: 1px solid #eee; background: #fcfcfc;"><td style="padding: 10px 4px;">Oct 31</td><td style="padding: 10px 4px;">Copa Pacífico (WAGR)</td><td style="padding: 10px 4px; color:#d32f2f; font-weight: bold;">206 (−10)</td><td style="padding: 10px 4px; font-weight: bold; color: #1b5e20;">1st</td></tr>
+          <tr style="border-bottom: 1px solid #eee;"><td style="padding: 10px 4px;">Oct 17</td><td style="padding: 10px 4px;">2nd Stage Zona Centro (WAGR)</td><td style="padding: 10px 4px; color:#d32f2f; font-weight: bold;">213 (−3)</td><td style="padding: 10px 4px; font-weight: bold; color: #1b5e20;">1st</td></tr>
+          <tr style="border-bottom: 1px solid #eee; background: #fcfcfc;"><td style="padding: 10px 4px;">Sep 26</td><td style="padding: 10px 4px;">Copa Centro (WAGR)</td><td style="padding: 10px 4px; color:#d32f2f; font-weight: bold;">203 (−13)</td><td style="padding: 10px 4px; font-weight: bold; color: #1b5e20;">1st</td></tr>
+          <tr style="border-bottom: 1px solid #eee;"><td style="padding: 10px 4px;">Sep 6</td><td style="padding: 10px 4px;">1st Stage Zona Centro</td><td style="padding: 10px 4px; color:#d32f2f; font-weight: bold;">135 (−9)</td><td style="padding: 10px 4px; font-weight: bold; color: #1b5e20;">1st</td></tr>
+        </tbody>
       </table>
     </div>
+  </div>
+  
 
     <h4 style="color: #555; border-bottom: 1px solid #ddd; padding-bottom: 5px;">2019–2023 Highlights</h4>
     <ul style="font-size: 14px; line-height: 2.2; color: #333; padding-left: 20px;">
