--- a/junior-career.html
+++ b/junior-career.html
@@ -253,7 +253,7 @@
     </div>
 </div>
 
-  <div style="margin-bottom: 50px;">
+ <div style="margin-bottom: 50px;">
 <h3 style="font-size: 20px; color: #0c2340; margin-bottom: 20px; display: flex; align-items: center; font-weight: 800;">
   <div style="margin-right: 12px; display: flex; align-items: center; justify-content: center; background: #f1f5f9; width: 36px; height: 36px; border-radius: 10px; border: 1px solid #e2e8f0;">
     <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
@@ -263,23 +263,23 @@
   </div>
   <span style="letter-spacing: -0.5px;">Annual Statistical Progression — Junior</span>
 </h3>
-    <div class="table-container" style="overflow-x: auto;">
-      <table style="width: 100%; min-width: 500px; border-collapse: collapse; text-align: center; box-shadow: 0 2px 8px rgba(0,0,0,0.05); border-radius: 10px; overflow: hidden;">
+    <div class="table-container" style="overflow-x: hidden;">
+      <table style="width: 100%; border-collapse: collapse; text-align: center; box-shadow: 0 2px 8px rgba(0,0,0,0.05); border-radius: 10px; overflow: hidden; table-layout: fixed;">
         <thead>
           <tr style="background-color: #0c2340; color: white;">
-            <th style="padding: 15px; border: 1px solid #eee;">Year</th>
-            <th style="padding: 15px; border: 1px solid #eee;">Rounds</th>
-            <th style="padding: 15px; border: 1px solid #eee;">Average</th>
-            <th style="padding: 15px; border: 1px solid #eee;">Best Score</th>
+            <th style="padding: 12px 5px; border: 1px solid #eee; font-size: 13px;">Year</th>
+            <th style="padding: 12px 5px; border: 1px solid #eee; font-size: 13px;">Rounds</th>
+            <th style="padding: 12px 5px; border: 1px solid #eee; font-size: 13px;">Average</th>
+            <th style="padding: 12px 5px; border: 1px solid #eee; font-size: 13px;">Best Score</th>
           </tr>
         </thead>
         <tbody>
-          <tr style="background-color: #fff9f5;"><td style="padding: 12px; border: 1px solid #eee; font-weight: bold;">2024–25</td><td style="padding: 12px; border: 1px solid #eee;">52</td><td style="padding: 12px; border: 1px solid #eee; font-weight: bold; color: #d32f2f;">71.37</td><td style="padding: 12px; border: 1px solid #eee; color: #d32f2f; font-weight: bold;">62 (−10)</td></tr>
-          <tr style="background-color: #f9f9f9;"><td style="padding: 12px; border: 1px solid #eee;">2023–24</td><td style="padding: 12px; border: 1px solid #eee;">47</td><td style="padding: 12px; border: 1px solid #eee; color: #1565c0; font-weight: bold;">72.60</td><td style="padding: 12px; border: 1px solid #eee; color: #d32f2f; font-weight: bold;">64 (−8)</td></tr>
-          <tr><td style="padding: 12px; border: 1px solid #eee;">2022–23</td><td style="padding: 12px; border: 1px solid #eee;">45</td><td style="padding: 12px; border: 1px solid #eee; color: #333;">74.04</td><td style="padding: 12px; border: 1px solid #eee; color: #d32f2f; font-weight: bold;">66 (−5)</td></tr>
-          <tr style="background-color: #f9f9f9;"><td style="padding: 12px; border: 1px solid #eee;">2021–22</td><td style="padding: 12px; border: 1px solid #eee;">34</td><td style="padding: 12px; border: 1px solid #eee; color: #333;">77.88</td><td style="padding: 12px; border: 1px solid #eee; color: #d32f2f; font-weight: bold;">70 (−2)</td></tr>
-          <tr><td style="padding: 12px; border: 1px solid #eee;">2020–21</td><td style="padding: 12px; border: 1px solid #eee;">18</td><td style="padding: 12px; border: 1px solid #eee; color: #666;">79.39</td><td style="padding: 12px; border: 1px solid #eee; color: #666;">74</td></tr>
-          <tr style="background-color: #f9f9f9;"><td style="padding: 12px; border: 1px solid #eee;">2019–20</td><td style="padding: 12px; border: 1px solid #eee;">17</td><td style="padding: 12px; border: 1px solid #eee; color: #999;">86.88</td><td style="padding: 12px; border: 1px solid #eee; color: #999;">75</td></tr>
+          <tr style="background-color: #fff9f5;"><td style="padding: 12px 5px; border: 1px solid #eee; font-weight: bold; font-size: 13px;">2024–25</td><td style="padding: 12px 5px; border: 1px solid #eee; font-size: 13px;">52</td><td style="padding: 12px 5px; border: 1px solid #eee; font-weight: bold; color: #d32f2f; font-size: 13px;">71.37</td><td style="padding: 12px 5px; border: 1px solid #eee; color: #d32f2f; font-weight: bold; font-size: 13px;">62 (−10)</td></tr>
+          <tr style="background-color: #f9f9f9;"><td style="padding: 12px 5px; border: 1px solid #eee; font-size: 13px;">2023–24</td><td style="padding: 12px 5px; border: 1px solid #eee; font-size: 13px;">47</td><td style="padding: 12px 5px; border: 1px solid #eee; color: #1565c0; font-weight: bold; font-size: 13px;">72.60</td><td style="padding: 12px 5px; border: 1px solid #eee; color: #d32f2f; font-weight: bold; font-size: 13px;">64 (−8)</td></tr>
+          <tr><td style="padding: 12px 5px; border: 1px solid #eee; font-size: 13px;">2022–23</td><td style="padding: 12px 5px; border: 1px solid #eee; font-size: 13px;">45</td><td style="padding: 12px 5px; border: 1px solid #eee; color: #333; font-size: 13px;">74.04</td><td style="padding: 12px 5px; border: 1px solid #eee; color: #d32f2f; font-weight: bold; font-size: 13px;">66 (−5)</td></tr>
+          <tr style="background-color: #f9f9f9;"><td style="padding: 12px 5px; border: 1px solid #eee; font-size: 13px;">2021–22</td><td style="padding: 12px 5px; border: 1px solid #eee; font-size: 13px;">34</td><td style="padding: 12px 5px; border: 1px solid #eee; color: #333; font-size: 13px;">77.88</td><td style="padding: 12px 5px; border: 1px solid #eee; color: #d32f2f; font-weight: bold; font-size: 13px;">70 (−2)</td></tr>
+          <tr><td style="padding: 12px 5px; border: 1px solid #eee; font-size: 13px;">2020–21</td><td style="padding: 12px 5px; border: 1px solid #eee; font-size: 13px;">18</td><td style="padding: 12px 5px; border: 1px solid #eee; color: #666; font-size: 13px;">79.39</td><td style="padding: 12px 5px; border: 1px solid #eee; color: #666; font-size: 13px;">74</td></tr>
+          <tr style="background-color: #f9f9f9;"><td style="padding: 12px 5px; border: 1px solid #eee; font-size: 13px;">2019–20</td><td style="padding: 12px 5px; border: 1px solid #eee; font-size: 13px;">17</td><td style="padding: 12px 5px; border: 1px solid #eee; color: #999; font-size: 13px;">86.88</td><td style="padding: 12px 5px; border: 1px solid #eee; color: #999; font-size: 13px;">75</td></tr>
         </tbody>
       </table>
     </div>
